API/Litecad.pas


Function lcInitialize (szConfigDir: PWideChar): Integer; stdcall; external 'litecad.dll';
Function lcUninitialize (bSaveConfig: Integer): Integer; stdcall; external 'litecad.dll';
Function lcCfgGetValue (hCfg: Integer; szTag: PWideChar): PWidechar; stdcall; external 'litecad.dll';
Function lcCfgSetValue (hCfg: Integer; szTagValue: PWideChar): Integer; stdcall; external 'litecad.dll';
Function lcAddFontRes (hModule: Integer; idResource: Integer; szFontName: PWideChar): Integer; stdcall; external 'litecad.dll';
Function lcAddFontFile (szFilename: PWideChar; szFontName: PWideChar): Integer; stdcall; external 'litecad.dll';
Function lcAddFontBin (hData: Integer; szFontName: PWideChar): Integer; stdcall; external 'litecad.dll';
Function lcStrAdd (szTag: PWideChar; szText: PWideChar): Integer; stdcall; external 'litecad.dll';
Function lcStrSet (szTag: PWideChar; szText: PWideChar): Integer; stdcall; external 'litecad.dll';
Function lcStrGet (szTag: PWideChar): PWidechar; stdcall; external 'litecad.dll';
Function lcStrFileLoad (szFileName: PWideChar): Integer; stdcall; external 'litecad.dll';
Function lcStrFileSave (szFileName: PWideChar; szLanguage: PWideChar; bInit: Integer): Integer; stdcall; external 'litecad.dll';
Function lcPropGetBool (hObject: Integer; idProp: Integer): Integer; stdcall; external 'litecad.dll';
Function lcPropGetInt (hObject: Integer; idProp: Integer): Integer; stdcall; external 'litecad.dll';
Function lcPropGetFloat (hObject: Integer; idProp: Integer): Double; stdcall; external 'litecad.dll';
Function lcPropGetStr (hObject: Integer; idProp: Integer): PWidechar; stdcall; external 'litecad.dll';
Function lcPropGetHandle (hObject: Integer; idProp: Integer): Integer; stdcall; external 'litecad.dll';
Function lcPropPutBool (hObject: Integer; idProp: Integer; bValue: Integer): Integer; stdcall; external 'litecad.dll';
Function lcPropPutInt (hObject: Integer; idProp: Integer; Value: Integer): Integer; stdcall; external 'litecad.dll';
Function lcPropPutFloat (hObject: Integer; idProp: Integer; Value: Double): Integer; stdcall; external 'litecad.dll';
Function lcPropPutStr (hObject: Integer; idProp: Integer; szValue: PWideChar): Integer; stdcall; external 'litecad.dll';
Function lcPropPutHandle (hObject: Integer; idProp: Integer; hValue: Integer): Integer; stdcall; external 'litecad.dll';
Function lcCreateDrawing : Integer; stdcall; external 'litecad.dll';
Function lcDeleteDrawing (hDrw: Integer): Integer; stdcall; external 'litecad.dll';
Function lcDrwNew (hDrw: Integer; szFileName: PWideChar; hLcWnd: Integer): Integer; stdcall; external 'litecad.dll';
Function lcDrwNewT (hDrw: Integer; szFileName: PWideChar; szTemplate: PWideChar; hLcWnd: Integer): Integer; stdcall; external 'litecad.dll';
Function lcDrwLoad (hDrw: Integer; szFileName: PWideChar; hWnd: HWND; hLcWnd: Integer): Integer; stdcall; external 'litecad.dll';
Function lcDrwSave (hDrw: Integer; szFileName: PWideChar; bBak: Integer; hWnd: HWND): Integer; stdcall; external 'litecad.dll';
Function lcDrwPurge (hDrw: Integer): Integer; stdcall; external 'litecad.dll';
Function lcDrwRegenViews (hDrw: Integer; hEnt: Integer): Integer; stdcall; external 'litecad.dll';
Function lcDrwSortObjects (hDrw: Integer; ObjType: Integer): Integer; stdcall; external 'litecad.dll';
Function lcDrwClearXData (hDrw: Integer; ObjType: Integer; Mode: Integer): Integer; stdcall; external 'litecad.dll';
Function lcDrwResolveBlocks (hDrw: Integer; szError: Pointer): Integer; stdcall; external 'litecad.dll';
Function lcDrwAddLayer (hDrw: Integer; szName: PWideChar; szColor: PWideChar; hLtype: Integer; Lweight: Integer): Integer; stdcall; external 'litecad.dll';
Function lcDrwAddLinetype (hDrw: Integer; szName: PWideChar; szDefinition: PWideChar): Integer; stdcall; external 'litecad.dll';
Function lcDrwAddLinetypeF (hDrw: Integer; szName: PWideChar; szFileName: PWideChar; szLtypeName: PWideChar): Integer; stdcall; external 'litecad.dll';
Function lcDrwAddTextStyle (hDrw: Integer; szName: PWideChar; szFontName: PWideChar): Integer; stdcall; external 'litecad.dll';
Function lcDrwAddDimStyle (hDrw: Integer; szName: PWideChar): Integer; stdcall; external 'litecad.dll';
Function lcDrwAddImage (hDrw: Integer; szName: PWideChar; szFileName: PWideChar): Integer; stdcall; external 'litecad.dll';
Function lcDrwAddBlock (hDrw: Integer; szName: PWideChar; X: Double; Y: Double): Integer; stdcall; external 'litecad.dll';
Function lcDrwAddBlockFromFile (hDrw: Integer; szName: PWideChar; szFileName: PWideChar; Overwrite: Integer; hwParent: HWND): Integer; stdcall; external 'litecad.dll';
Function lcDrwAddBlockFromDrw (hDrw: Integer; szName: PWideChar; hDrw2: Integer; Overwrite: Integer; hwParent: HWND): Integer; stdcall; external 'litecad.dll';
Function lcDrwAddBlockFile (hDrw: Integer; szName: PWideChar; szFileName: PWideChar; Overwrite: Integer; hwParent: HWND): Integer; stdcall; external 'litecad.dll';
Function lcDrwAddViewPaper (hDrw: Integer; szName: PWideChar; PaperSize: Integer; Orient: Integer; Width: Double; Height: Double): Integer; stdcall; external 'litecad.dll';
Function lcDrwDeleteObject (hDrw: Integer; hObject: Integer): Integer; stdcall; external 'litecad.dll';
Function lcDrwGetFirstObject (hDrw: Integer; ObjType: Integer): Integer; stdcall; external 'litecad.dll';
Function lcDrwGetNextObject (hDrw: Integer; hObject: Integer): Integer; stdcall; external 'litecad.dll';
Function lcDrwGetObjectByID (hDrw: Integer; ObjType: Integer; Id: Integer): Integer; stdcall; external 'litecad.dll';
Function lcDrwGetObjectByIDH (hDrw: Integer; ObjType: Integer; szId: PWideChar): Integer; stdcall; external 'litecad.dll';
Function lcDrwGetObjectByName (hDrw: Integer; ObjType: Integer; szName: PWideChar): Integer; stdcall; external 'litecad.dll';
Function lcDrwCountObjects (hDrw: Integer; ObjType: Integer): Integer; stdcall; external 'litecad.dll';
Function lcDrwGetViewByBlock (hDrw: Integer; hBlock: Integer): Integer; stdcall; external 'litecad.dll';
Function lcDrwGetEntByID (hDrw: Integer; Id: Integer): Integer; stdcall; external 'litecad.dll';
Function lcDrwGetEntByIDH (hDrw: Integer; szId: PWideChar): Integer; stdcall; external 'litecad.dll';
Function lcDrwGetEntByKey (hDrw: Integer; Key: Integer): Integer; stdcall; external 'litecad.dll';
Function lcViewSetRect (hView: Integer; Xcen: Double; Ycen: Double; Width: Double; Height: Double): Integer; stdcall; external 'litecad.dll';
Function lcViewSetRect2 (hView: Integer; Lef: Double; Bot: Double; Rig: Double; Top: Double): Integer; stdcall; external 'litecad.dll';
Function lcViewSetLimits (hView: Integer; Xmin: Double; Ymin: Double; Xmax: Double; Ymax: Double): Integer; stdcall; external 'litecad.dll';
Function lcViewSetGrid (hView: Integer; X0: Double; Y0: Double; dX: Double; dY: Double): Integer; stdcall; external 'litecad.dll';
Function lcViewRegen (hView: Integer; hEnt: Integer): Integer; stdcall; external 'litecad.dll';
Function lcViewSetPaperSize (hView: Integer; PaperSize: Integer; Orient: Integer; Width: Double; Height: Double): Integer; stdcall; external 'litecad.dll';
Function lcViewGetEntByPoint (hView: Integer; X: Double; Y: Double; Delta: Double; Mode: Integer): Integer; stdcall; external 'litecad.dll';
Function lcViewGetEntsByRect (hView: Integer; Lef: Double; Bot: Double; Rig: Double; Top: Double; bCross: Integer; MaxNum: Integer): Integer; stdcall; external 'litecad.dll';
Function lcViewGetEntity (iEnt: Integer): Integer; stdcall; external 'litecad.dll';
Function lcViewRasterize (hView: Integer; szFileName: PWideChar; Lef: Double; Bot: Double; Rig: Double; Top: Double; Scale: Double): Integer; stdcall; external 'litecad.dll';
Function lcViewDrawMarker (hView: Integer; X: Double; Y: Double): Integer; stdcall; external 'litecad.dll';
Function lcViewDrawLine (hView: Integer; X0: Double; Y0: Double; X1: Double; Y1: Double): Integer; stdcall; external 'litecad.dll';
Function lcViewDrawXline (hView: Integer; X0: Double; Y0: Double; X1: Double; Y1: Double; bRay: Integer): Integer; stdcall; external 'litecad.dll';
Function lcViewDrawRect (hView: Integer; X0: Double; Y0: Double; X1: Double; Y1: Double): Integer; stdcall; external 'litecad.dll';
Function lcBlockClear (hBlock: Integer; hLayer: Integer): Integer; stdcall; external 'litecad.dll';
Function lcBlockPurge (hBlock: Integer): Integer; stdcall; external 'litecad.dll';
Function lcBlockSortEnts (hBlock: Integer): Integer; stdcall; external 'litecad.dll';
Function lcBlockAddPoint (hBlock: Integer; X: Double; Y: Double): Integer; stdcall; external 'litecad.dll';
Function lcBlockAddPoint2 (hBlock: Integer; X: Double; Y: Double; PtMode: Integer; PtSize: Double): Integer; stdcall; external 'litecad.dll';
Function lcBlockAddXline (hBlock: Integer; X: Double; Y: Double; Angle: Double; bRay: Integer): Integer; stdcall; external 'litecad.dll';
Function lcBlockAddXline2P (hBlock: Integer; X: Double; Y: Double; X2: Double; Y2: Double; bRay: Integer): Integer; stdcall; external 'litecad.dll';
Function lcBlockAddLine (hBlock: Integer; X1: Double; Y1: Double; X2: Double; Y2: Double): Integer; stdcall; external 'litecad.dll';
Function lcBlockAddLineDir (hBlock: Integer; X: Double; Y: Double; Angle: Double; Dist: Double): Integer; stdcall; external 'litecad.dll';
Function lcBlockAddLineTan (hBlock: Integer; hEnt1: Integer; hEnt2: Integer; Mode: Integer): Integer; stdcall; external 'litecad.dll';
Function lcBlockAddPolyline (hBlock: Integer; FitType: Integer; bClosed: Integer; bFilled: Integer): Integer; stdcall; external 'litecad.dll';
Function lcBlockAddRect (hBlock: Integer; Xc: Double; Yc: Double; Width: Double; Height: Double; Angle: Double; bFilled: Integer): Integer; stdcall; external 'litecad.dll';
Function lcBlockAddRect2 (hBlock: Integer; Left: Double; Bottom: Double; Width: Double; Height: Double; Rad: Double; bFilled: Integer): Integer; stdcall; external 'litecad.dll';
Function lcBlockAddCircle (hBlock: Integer; X: Double; Y: Double; Radius: Double; bFilled: Integer): Integer; stdcall; external 'litecad.dll';
Function lcBlockAddArc (hBlock: Integer; X: Double; Y: Double; Radius: Double; StartAngle: Double; ArcAngle: Double): Integer; stdcall; external 'litecad.dll';
Function lcBlockAddArc3P (hBlock: Integer; X1: Double; Y1: Double; X2: Double; Y2: Double; X3: Double; Y3: Double): Integer; stdcall; external 'litecad.dll';
Function lcBlockAddEllipse (hBlock: Integer; X: Double; Y: Double; R1: Double; R2: Double; RotAngle: Double; StartAngle: Double; ArcAngle: Double): Integer; stdcall; external 'litecad.dll';
Function lcBlockAddText (hBlock: Integer; szText: PWideChar; X: Double; Y: Double): Integer; stdcall; external 'litecad.dll';
Function lcBlockAddText2 (hBlock: Integer; szText: PWideChar; X: Double; Y: Double; Align: Integer; H: Double; WScale: Double; RotAngle: Double; Oblique: Double): Integer; stdcall; external 'litecad.dll';
Function lcBlockAddTextWin (hBlock: Integer; szText: PWideChar; X: Double; Y: Double): Integer; stdcall; external 'litecad.dll';
Function lcBlockAddTextWin2 (hBlock: Integer; szText: PWideChar; X: Double; Y: Double; Align: Integer; H: Double; WScale: Double; RotAngle: Double; Oblique: Double): Integer; stdcall; external 'litecad.dll';
Function lcBlockAddMText (hBlock: Integer; szText: PWideChar; X: Double; Y: Double; WrapWidth: Double; Align: Integer; RotAngle: Double; H: Double; WScale: Double): Integer; stdcall; external 'litecad.dll';
Function lcBlockAddArcText (hBlock: Integer; szText: PWideChar; X: Double; Y: Double; Radius: Double; StartAngle: Double; bClockwise: Integer; H: Double; WScale: Double): Integer; stdcall; external 'litecad.dll';
Function lcBlockAddBlockRef (hBlock: Integer; hRefBlock: Integer; X: Double; Y: Double; Scal: Double; Angle: Double): Integer; stdcall; external 'litecad.dll';
